--- a/TravelApp/MainPage.xaml
+++ b/TravelApp/MainPage.xaml
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TravelApp.MainPage">
-    
+             x:Class="TravelApp.MainPage"
+             BackgroundColor="White">
+
+    <AbsoluteLayout>
+        <Image 
+        Source="C:\Users\David Wang\Desktop\Projects\App Development\Unit3\TravelApp\TravelApp\Resources\Images\searchbar.png"
+        WidthRequest="475" HeightRequest="180"
+        AbsoluteLayout.LayoutBounds="0.5,0.3,AutoSize,AutoSize"
+        AbsoluteLayout.LayoutFlags="PositionProportional" 
+        />
+
+        <Entry 
+        Placeholder="Where would you like to travel?"
+        AbsoluteLayout.LayoutBounds="0.5,0.366,230,AutoSize"
+        AbsoluteLayout.LayoutFlags="PositionProportional" 
+        TextColor="Black"
+        />
+    </AbsoluteLayout>
 </ContentPage>
