--- a/TravelApp/InfoPage.xaml
+++ b/TravelApp/InfoPage.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelApp.InfoPage"
              Title="InfoPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Show Map" Clicked="ShowMapButton_Clicked" Order="Secondary" />
+    </ContentPage.ToolbarItems>
+
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        
     </VerticalStackLayout>
 </ContentPage>
