--- a/TravelApp/InfoPage.xaml
+++ b/TravelApp/InfoPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TravelApp.InfoPage"
-             Title="InfoPage">
+             Title="InfoPage"
+             BackgroundColor="LightGray">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Show Map" Clicked="ShowMapButton_Clicked" Order="Secondary" />
     </ContentPage.ToolbarItems>
@@ -13,10 +14,21 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <Label x:Name="gptLabel" FontSize="Medium" Grid.Row="0" Margin="0,0,0,10"/>
-        <Label x:Name="destinationLabel" FontSize="Medium" Grid.Row="1" Margin="0,0,0,10"/>
-        <Label x:Name="attractionsLabel" FontSize="Medium" Grid.Row="2" Margin="0,0,0,10"/>
+        
+        <Label x:Name="gptLabel" Grid.Row="0" Grid.Column="1" FontSize="Medium" LineBreakMode="WordWrap" Margin="0, 0, 0, 10" TextColor="Black"/>
+
+
+        <Label x:Name="destinationLabel" Grid.Row="1" Grid.Column="1" FontSize="Medium" LineBreakMode="WordWrap" Margin="0, 0, 0, 10" TextColor="Black"/>
+
+
+        <Label x:Name="attractionsLabel" Grid.Row="2" Grid.Column="2" FontSize="Medium" LineBreakMode="WordWrap" Margin="0, 0, 0, 10" TextColor="Black"/>
+    
+        
     </Grid>
 
 </ContentPage>
