--- a/TravelApp/MainPage.xaml
+++ b/TravelApp/MainPage.xaml
@@ -7,8 +7,8 @@
         <Label Text="Welcome to HitchHiker" FontSize="Large" HorizontalOptions="Center" Margin="0,20,0,0" TextColor="Black"/>
         <AbsoluteLayout>
             <Image 
-        Source="C:\Users\David Wang\Desktop\Projects\App Development\Unit3\TravelApp\TravelApp\Resources\Images\searchbar.png"
-        WidthRequest="475" HeightRequest="180"
+        Source="C:\Users\Arnav Choudhary\OneDrive\Desktop\searchbar.png"
+        WidthRequest="510" HeightRequest="150"
         AbsoluteLayout.LayoutBounds="0.5,0.3,AutoSize,AutoSize"
         AbsoluteLayout.LayoutFlags="PositionProportional" 
         />
